# multiTrace-features

./: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile  LICENSE  README  multiTRACE_network.uxf  stateEquations.txt  update_docs.sh
debug/: assembly.R  layer.R
gui/: .gitignore  CMakeLists.txt
gui/qTrace/: CMakeLists.txt  QtUtility.hpp  cortexthread.cpp  cortexthread.hpp  cortexviewer.cpp  cortexviewer.h  cortexviewer.hpp  cortexviewer.ui  layerviewer.cpp  layerviewer.hpp  layerviewer.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qTrace.pro
src/: Assembly.cpp  Assembly.h  Assembly.hpp  AssemblyState.h  AssemblyState.hpp  CMakeLists.txt  Connection.cpp  Connection.h  Connection.hpp  ConnectionPattern.cpp  ConnectionPattern.h  ConnectionPattern.hpp  ConnectionPatterns.hpp  Cortex.cpp  Cortex.h  Cortex.hpp  FastGaussian.cpp  FastGaussian.hpp  HebbianLearning.cpp  HebbianLearning.h  HebbianLearning.hpp  InputLayer.h  InputLayer.hpp  Layer.cpp  Layer.h  Layer.hpp  LearningRule.h  LearningRule.hpp  LearningRules.hpp  NoLearning.h  NoLearning.hpp  README  SonntagUpdate.cpp  SonntagUpdate.h  SonntagUpdate.hpp  UNR.cpp  UNR.h  UNR.hpp  UpdateModel.h  UpdateModel.hpp  (+3 more)
src/test/: AssemblyIncludes.h  AssemblyIncludes.hpp  CMakeLists.txt  runTests.cpp  test_Assembly.cpp  test_Assembly.h  test_Assembly.hpp  test_Layer.cpp  test_Layer.h  test_Layer.hpp
